syntax = "proto3";

option java_multiple_files = true;
option java_package = "calculate";

package calculate;

service CalculateServiceV2 {

  rpc Calculate (RequestMessage) returns (ResponseMessage) {};

}


message RequestMessage{

  int32 x = 1;
  int32 y = 2;

}

message ResponseMessage{
  int32 result = 1;
}